Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/visit_s_date__c.field-meta.xml
<CustomField>
    <fullName>visit_s_date__c</fullName>
    <formula>AP_Tour_Plan__r.Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>visit&apos;s date</label>
    <type>Date</type>
</CustomField>