Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Visit_status__c.field-meta.xml
<CustomField>
    <fullName>Visit_status__c</fullName>
    <formula>IF( Remarks__c != null &amp;&amp;  ISBLANK(Products__c) , &apos;Visited&apos;, &apos;Not Visited&apos;)</formula>
    <label>Visit status</label>
    <type>Text</type>
</CustomField>