Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Visit_type_Actual__c.field-meta.xml
<CustomField>
    <fullName>Visit_type_Actual__c</fullName>
    <label>Visit type(Actual)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headquarter</fullName>
            </value>
            <value>
                <fullName>Headquarter-Metro</fullName>
            </value>
            <value>
                <fullName>Headquarter-State Capital</fullName>
            </value>
            <value>
                <fullName>Ex-station</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>E-Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>