Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/fields/Worked_with_TL_User__c.field-meta.xml
<CustomField>
    <fullName>Worked_with_TL_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Worked with TL/User</description>
    <label>Worked with TL/User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>