Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/recordTypes/brandingVist.recordType-meta.xml
<RecordType>
    <fullName>brandingVist</fullName>
    <active>true</active>
    <label>brandingVist</label>
</RecordType>