Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/recordTypes/Other_Activities.recordType-meta.xml
<RecordType>
    <fullName>Other_Activities</fullName>
    <active>true</active>
    <label>Other Activities</label>
</RecordType>