Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/recordTypes/Project_Visit.recordType-meta.xml
<RecordType>
    <fullName>Project_Visit</fullName>
    <active>true</active>
    <description>Project Visit Record type</description>
    <label>Project Visit</label>
</RecordType>