Partial_14Dec2021/force-app/main/default/objects/AP_Site_Visit__c/recordTypes/Visits.recordType-meta.xml
<RecordType>
    <fullName>Visits</fullName>
    <active>true</active>
    <label>Visits</label>
</RecordType>